<resources>
    <string name="app_name_release" translatable="false">Psytester</string>
    <string name="app_name_debug" translatable="false">Psytester Debug</string>
    <string name="san">Самочувствие, активность, настроение</string>
    <string name="mental_states">Cамооценка психических состояний Айзенка</string>
    <string name="jersild">Психические состояния личности Джерсайлда</string>
    <string name="alarm_scale">Шкала тревоги Спилберга-Ханина</string>
    <string name="san_instructions">
        Вам предлагается описать свое состояние в настоящий момент, с помощью опросника, состоящего из 30 полярных признаков.
        \nВы должны в каждой паре выбрать ту характеристику, которая наиболее точно описывает ваше состояние и отметить цифру, которая соответствует степени (силе) выраженности данной характеристики.
    </string>
    <string name="mental_states_instructions">
        Внимательно прочтите предложенные высказывания.
        \nНа каждое высказывание выберите ответ из трех альтернатив:
        \n1) Да, это состояние мне присуще часто;
        \n2) Такое состояние у меня иногда бывает;
        \n3) Нет, это мне совсем не подходит.
    </string>
    <string name="jersild_instructions">
        Приведенные ниже высказывания отобраны из типичных, повседневных суждений людей, которым свойственны личностные эмоциональные проблемы и которым показана групповая психокоррекция или психотерапия.
        \nПрочтите внимательно каждое из суждений. Они выражают собой то, в чем люди хотели бы разобраться в своей собственной жизни и глубже понять самих себя.
        \nОтметьте, выражает ли данное суждение собой некоторое чувство, присущее вам, или вопрос, в котором вы лично хотели бы разобраться.
        \nВ некоторых суждениях присутствуют темы, упоминаемые в тексте повторно. Не обращайте на них внимание и отвечайте так, как если бы встретились с ними впервые.
        \nПомните, что «правильных» или «неправильных» ответов на предложенные вопросы не существует. Рассматривайте каждое из суждений как вполне самостоятельное и отвечайте на него независимо от остальных.
        \nОтметьте в конечном счете, выражает ли это суждение именно ту проблему, с которой вам лично в жизни приходится иметь дело. Используйте следующие варианты ответов:
        \n1. Я думаю именно так. Это – одна из сфер, в которой я хотел(а) бы лично разобраться.
        \n2. Я думаю так, но данный вопрос считаю для себя не особенно важным, чтобы специально в нем разбираться.
        \n3. Это не имеет отношения к моей жизни.
        \n4. Я не знаю. Мне трудно ответить на данный вопрос.
    </string>
    <string name="alarm_scale_instructions">
        Прочитайте внимательно каждое из приведенных предложений.
        \nВыберите ответ в зависимости от того, как вы себя чувствуете в данный момент.
        \nНад вопросами долго не задумывайтесь, правильных и неправильных ответов здесь нет.
    </string>
    <string name="san_about">
        Тест «Самочувствие, активность, настроение» (САН) – разновидность опросников состояний и настроений.
        \nРазработан в 1973 году сотрудниками Первого МГМУ им. Сеченова (В. А. Доскин, Н. А. Лаврентьева, В. Б. Шарай, М. П. Мирошников).
        САН нашел широкое распространение при оценке психического состояния больных и здоровых лиц, психоэмоциональной реакции на нагрузку,
        для выявления индивидуальных особенностей и биологических ритмов психофизиологических функций.
    </string>
    <string name="mental_states_about">
        Тест самооценки психических состояний разработан известным психологом Гансом Айзенком (Hans Eysenck).
        С помощью теста можно в первом приближении определить уровни таких психических состояний, как тревожность, фрустрация, агрессивность, ригидность.
        \nТревожность – индивидуальная психическая особенность, проявляющаяся в склонности человека к частым и интенсивным переживаниям состояния тревоги,
        а также в низком пороге его возникновения. Здесь тревога выступает как переживание эмоционального дискомфорта, связанное с ожиданием неблагополучия,
        с предчувствием грозящей или кажущейся таковой опасности.\n

        \nФрустрация – психическое состояние, вызванное неуспехом в удовлетворении потребности, желания. Проявляется в отрицательных переживаниях: разочаровании,
        раздражении, тревоге, отчаянии и т. п.\n

        \nАгрессивность – не вызванная объективными обстоятельствами неспровоцированная враждебность человека по отношению к людям и окружающему миру.
        Проявляется в тенденции нападать, причинять неприятности, наносить вред людям, животным, окружающему миру. Иногда проявляется в форме демонстрации
        превосходства в силе по отношению к другому человеку или иному социальному объекту.\n

        \nРигидность – затрудненность (вплоть до полной неспособности) в изменении намеченной субъектом программы деятельности в условиях, объективно
        требующих ее перестройки. Противоположное по значению свойство личности – пластичность.\n
    </string>
    <string name="jersild_about">
        Опросник Психические состояния личности (Personal Issues Inventory) разработан Артуром Т. Джерсайлдом (Arthur Thomas Jersild) в 1950-х годах.
        Методика направлена на выявление таких стойких негативных внутренних состояний, как одиночество, ощущение бессмысленность существования, половой конфликт,
        враждебный настрой, безнадежность и др.
    </string>
    <string name="alarm_scale_about">
        Шкала тревоги Спилбергера (State-Trait Anxiety Inventory, STAI) является информативным способом самооценки как уровня тревожности в данный момент
        (реактивная тревожность, как состояние), так и личностной тревожности (как устойчивая характеристика человека).

        \n\nТест разработан Чарльзом Спилбергером (Charles Spielberger). Русскоязычная адаптация сделана Ю. Л. Ханиным.

        \nИзмерение тревожности как свойства личности особенно важно, так как это свойство во многом обуславливает поведение субъекта.
        Определенный уровень тревожности – естественная и обязательная особенность активной деятельной личности. У каждого человека существует свой оптимальный,
        или желательный, уровень тревожности – это так называемая полезная тревожность. Оценка человеком своего состояния в этом отношении является для него существенным
        компонентом самоконтроля и самовоспитания.
    </string>
    <string-array name="san_input_min">
        <item>Самочувствие\nплохое</item>,
        <item>Чувствую себя\nсильным</item>
        <item>Пассивный</item>
        <item>Малоподвижный</item>
        <item>Веселый</item>
        <item>Хорошее настроение</item>
        <item>Работоспособный</item>
        <item>Полный сил</item>
        <item>Медлительный</item>
        <item>Бездеятельный</item>
        <item>Счастливый</item>
        <item>Жизнерадостный</item>
        <item>Напряженный</item>
        <item>Здоровый</item>
        <item>Безучастный</item>
        <item>Равнодушный</item>
        <item>Восторженный</item>
        <item>Радостный</item>
        <item>Отдохнувший</item>
        <item>Свежий</item>
        <item>Сонливый</item>
        <item>Желание отдохнуть</item>
        <item>Спокойный</item>
        <item>Оптимистичный</item>
        <item>Выносливый</item>
        <item>Бодрый</item>
        <item>Соображать трудно</item>
        <item>Рассеянный</item>
        <item>Полный надежд</item>
        <item>Довольный</item>
    </string-array>
    <string-array name="san_input_max">
        <item>Самочувствие\nхорошее</item>
        <item>Чувствую себя\nслабым</item>
        <item>Активный</item>
        <item>Подвижный</item>
        <item>Грустный</item>
        <item>Плохое настроение</item>
        <item>Разбитый</item>
        <item>Обессиленный</item>
        <item>Быстрый</item>
        <item>Деятельный</item>
        <item>Несчастный</item>
        <item>Мрачный</item>
        <item>Расслабленный</item>
        <item>Больной</item>
        <item>Увлеченный</item>
        <item>Взволнованный</item>
        <item>Унылый</item>
        <item>Печальный</item>
        <item>Усталый</item>
        <item>Изнуренный</item>
        <item>Возбужденный</item>
        <item>Желание работать</item>
        <item>Озабоченный</item>
        <item>Пессимистичный</item>
        <item>Утомляемый</item>
        <item>Вялый</item>
        <item>Соображать легко</item>
        <item>Внимательный</item>
        <item>Разочарованный</item>
        <item>Недовольный</item>
    </string-array>
    <string name="mental_states_average_anxiety">Тревожность средняя, допустимого уровня (%1$.1f)</string>
    <string name="mental_states_average_frustration">У вас средний уровень фрустрации (%1$.1f)</string>
    <string name="mental_states_average_aggressiveness">У вас средний уровень агрессивности (%1$.1f)</string>
    <string name="mental_states_average_rigidity">У вас средний уровень ригидности (%1$.1f)</string>
    <string name="mental_states_anxiety_details">
        Тревожность - индивидуальная психическая особенность, проявляющаяся в склонности человека к
        частым и интенсивным переживаниям состояния тревоги, а также в низком пороге его возникновения.
        Здесь тревога выступает как переживание эмоционального дискомфорта, связанное с ожиданием
        неблагополучия, с предчувствием грозящей или кажущейся таковой опасности
    </string>
    <string name="mental_states_frustration_details">
        Фрустрация – психическое состояние, вызванное неуспехом в удовлетворении потребности, желания.
        Проявляется в отрицательных переживаниях: разочаровании, раздражении, тревоге, отчаянии и т. п.
    </string>
    <string name="mental_states_aggressiveness_details">
        Агрессивность – не вызванная объективными обстоятельствами неспровоцированная враждебность
        человека по отношению к людям и окружающему миру. Проявляется в тенденции нападать, причинять
        неприятности, наносить вред людям, животным, окружающему миру. Иногда проявляется в форме
        демонстрации превосходства в силе по отношению к другому человеку или иному социальному объекту
    </string>
    <string name="mental_states_rigidity_details">
        Ригидность – затрудненность (вплоть до полной неспособности) в изменении намеченной субъектом
        программы деятельности в условиях, объективно требующих ее перестройки. Сильно выраженная
        ригидность проявляется в неизменяемости поведения, убеждений, взглядов, даже если они не
        соответствуют реальной действительности. Противоположное по значению свойство личности – пластичность
    </string>
    <string name="jersild_result_details">
        Степень выраженности:
        \nСлабо (0 - 2)
        \nУмеренно (3 - 4)
        \nСильно (5 - 6)
        \nОчень высоко (7 - 8)
    </string>
    <string name="jersild_loneliness">Одиночество (%1$.1f)</string>
    <string name="jersild_meaninglessness">Ощущение бессмысленности существования (%1$.1f)</string>
    <string name="jersild_freedom">Свобода выбора (отношение к авторитету) (%1$.1f)</string>
    <string name="jersild_sexual_conflict">Половой конфликт (%1$.1f)</string>
    <string name="jersild_hostile_conflict">Враждебный конфликт (%1$.1f)</string>
    <string name="jersild_discrepancy">Расхождение между реальным и идеальным «Я» (%1$.1f)</string>
    <string name="jersild_strength_of_will">Свобода воли (%1$.1f)</string>
    <string name="jersild_hopelessness">Безнадежность (%1$.1f)</string>
    <string name="jersild_homelessness">Чувство неприкаянности, бездомность (%1$.1f)</string>
    <string name="upgrade_account_description">
        Вы можете улучшить свой аккаунт до аккаунта Психолога, чтобы получать доступ к истории приглашенных пользователей
    </string>
    <string name="upgrade_account_pricing">Стоимость улучшения: 5$</string>
    <string name="upgrade_account_accept">Улучшить</string>
</resources>